--- a/DOM/HTML/ModalPopup/Index.html
+++ b/DOM/HTML/ModalPopup/Index.html
@@ -8,16 +8,36 @@
     <style>
          #main{
                width: 100%;
-               background-color: gray;
+               /* background-color: gray; */
                display: flex;
                justify-content: center;
                align-items: center;
+         }
+         #popup{
+            padding: 100px;
+            width: 20%;
+            background-color: rgb(211, 208, 208);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+         }
+         #popup button{
+             padding: 5px 25px;
+             background-color: rgb(212, 62, 87);
+             color: white;
          }
     </style>
 </head>
 <body>
     <div id="main">
-
+         <button>
+            submit
+         </button>
+         <div id="popup">
+                 <h1>HTMl POPUP</h1>
+                 <button>CLOSE</button>
+         </div>
     </div>
 </body>
 </html>
